# PhotoEditionV3

./: CMakeLists.txt  PhotoEditionV3.sln
PhotoEditionV3/: Functions.h  Loader.h  PhotoEditionV3.aps  PhotoEditionV3.rc  PhotoEditionV3.vcxproj  PhotoEditionV3.vcxproj.filters  WinProc.h  main.cpp  resource.h
PhotoEditionV3/Debug/: PhotoEditionV3.exe.recipe  PhotoEditionV3.ilk  PhotoEditionV3.res  main.obj.enc  vc142.idb
PhotoEditionV3/Debug/PhotoEditionV3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PhotoEditionV3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
